# rist-ai-cctv-2026-jhyang

./: .gitignore  README.md  coco128.yaml  main_window.py  model_loader.py  opencv_build.md  pyproject.toml  run_app.sh  test.text  truck_safebelt.py  video_test.py
config/: event_logic_setting.ini  global_setting.ini
db/: db_accounts.py  db_ai_event_log.py  db_cctv_list.py  db_cctv_location.py  db_cctv_setting.py  db_logic_list.py  db_manager.py  db_model_list.py  db_video_layout.py
dialog/: add_new_model_dialog.py  add_trained_model_dialog.py  ai_event_log_image_popup_dialog.py  ai_event_log_search_dialog.py  auto_delete_setting_dialog.py  cctv_register_management_dialog.py  cctv_setting_dialog.py  cctv_setting_event_dialog.py  cctv_setting_event_select_dialog.py  dataset_config_file_path_dialog.py  event_logic_add_dialog.py  event_logic_setting_dialog.py  login_dialog.py  management_dialog.py  performance_metric_graph_dialog.py  system_status_dialog.py
event_logic/: event_logic_func.py  event_logic_func_orig.py  safebelt.py  setup_event_logic.py  some_event_logic.py  test_event_logic.py
rpa/: log_text_widget.py  rpa_helper.py  rpa_home_widget.py  rpa_main_window.py  rpa_report_detail_dialog.py  rpa_report_widget.py  rpa_setting_widget.py  rpa_task_detail_dialog.py  rpa_task_widget.py
setting/: paths.py  use_qsetting.py
src/: ab_test.py  mlflow_test.py  model_converter.py  model_manager.py  plan_converter.py  train_model_process.py  train_yolo.py
ui/: add_new_model_dialog.ui  add_trained_model_dialog.ui  ai_event_log_filter_search_widget.ui  ai_event_log_image_widget.ui  ai_event_log_page_button_frame_widget.ui  ai_event_log_paging_widget.ui  ai_event_log_search_cctv_list_widget.ui  ai_event_log_search_dialog.ui  main_window.ui  (+60 more)
(+49 files in other folders)
