[project]
name = "rist-ai-cctv"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
  "rich>=14.0.0",
  "numpy==1.26.4",
  "imageio>=2.37.0",
  "onvif-zeep>=0.2.12",
  "cupy-cuda12x>=13.4.1",
  "cvcuda-cu12>=0.15.0",
  "pynvml>=12.0.0",
  "pyside6>=6.9.0",
  "mysql-connector-python>=9.3.0",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "torchaudio>=2.7.0",
  "tensorrt==10.8.0.43",
  "tensorrt-cu12-bindings==10.8.0.43",
  "onnx==1.17.0",
  "onnxslim>=0.1.53",
  "onnxruntime-gpu==1.17.0",
  "tritonclient[all]>=2.57.0",
  "dotenv>=0.9.9",
  "mlflow>=2.22.0",
  "mariadb>=1.1.12",
  "pymysql>=1.1.1",
  "natsort>=8.4.0",
  "opencv-python>=4.11.0.86",
  "ultralytics>=8.3.146",
  "seaborn>=0.13.2",
  "schedule>=1.2.2",
  "memory-profiler>=0.61.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
cvcuda-cu12 = [
  { index = "pypi-nvidia", marker = "sys_platform == 'linux'" },
]
tensorrt = [
  { index = "pypi-nvidia", marker = "sys_platform == 'linux'" },
]
tritonclient = [
  { index = "pypi-nvidia", marker = "sys_platform == 'linux'" },
]
tensorrt-cu12 = [
  { index = "pypi-nvidia", marker = "sys_platform == 'linux'" },
]
tensorrt-cu12-bindings = [
  { index = "pypi-nvidia", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pypi-nvidia"
url = "https://pypi.nvidia.com/"
explicit = true
